--- a/.github/workflows/demo1.yml
+++ b/.github/workflows/demo1.yml
@@ -11,7 +11,7 @@ jobs:
       - name: Install dependencies
         run: npm ci
       - name: Test code
-        run: npm run test
+        run: npm test
       - name: Build code
         run: npm run build
       - name: Deploy project
