--- a/.github/workflows/demo1.yml
+++ b/.github/workflows/demo1.yml
@@ -1,5 +1,10 @@
 name: Events Demo
-on: [push, workflow_dispatch]
+on: 
+  workflow_dispatch:
+  pull_request: 
+    types: 
+      - opened
+      - edited
 jobs:
   deploy:
     runs-on: ubuntu-latest
